[Feat] : Cocktail update api 수정
path에 칵테일 이름을 받는 기존의 함수를 body로 받게 수정
